syntax = "proto3";

package kv;

service KV {
  rpc AppendEntries(AppendEntriesGrpcRequest) returns (AppendEntriesGrpcResponse);
  rpc RequestVote(RequestVoteGrpcRequest) returns (RequestVoteGrpcResponse);
  rpc SubmitEntry(SubmitEntryGrpcRequest) returns (SubmitEntryGrpcResponse);
}

message GetItem {
  string key = 1;
  string id = 2;
}


message PutItem {
  string key = 1;
  string value = 2;
  string id = 3;
}

message LogItem {
  uint64 term = 1;
  oneof kv_item {
    GetItem get_item = 2;
    PutItem put_item = 3;
  };
}

message AppendEntriesGrpcRequest {
  uint64 term = 1;
  uint64 leader_id = 2;
  optional uint64 prev_log_index = 3;
  optional uint64 prev_log_term = 4;
  repeated LogItem entries = 5;
  optional uint64 leader_commit = 6;
}

message AppendEntriesGrpcResponse {
  uint64 term = 1;
  bool success = 2;
}

message RequestVoteGrpcRequest {
  uint64 candidate_id = 1;
  uint64 term = 2;
  optional uint64 last_log_index = 3;
  optional uint64 last_log_term = 4;
}

message RequestVoteGrpcResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

message SubmitEntryGrpcRequest {
  oneof entry_item {
    GetItem get_item = 1;
    PutItem put_item = 2;
  };
}

message SubmitEntryGrpcResponse {
  optional string value = 1;
  bool duplicate = 2;
  bool not_leader = 3;
  bool invalid_command = 4;
}
